feat: Set up database configuration with Neon Serverless
- Add @neondatabase/serverless dependency for Postgres connectivity
- Create src/lib/db.ts with connection utilities:
  - isDatabaseConfigured() to check for DATABASE_URL
  - checkDatabaseConnection() for health checks
  - query() tagged template for safe queries
  - rawQuery() for dynamic SQL
- Add database types to src/types/index.ts:
  - DatabaseStatus, AlertRecord, AlertStatus
- Add unit tests for database configuration

Co-Authored-By: Ralph <ralph@ai.agent>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "validate": "npm run lint && npm run typecheck && npm run test"
   },
   "dependencies": {
-    "@microsoft/signalr": "^8.0.0"
+    "@microsoft/signalr": "^8.0.0",
+    "@neondatabase/serverless": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
