--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "validate": "npm run lint && npm run typecheck && npm run test"
+    "validate": "npm run lint && npm run typecheck && npm run test",
+    "db:migrate": "vite-node scripts/migrate.ts"
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
