feat: implement Phase 1 alerts API + Phase 5-6 config & tests (#4)
Add GET /api/alerts (paginated, filterable, sortable) and GET /api/alerts/[id]
(with OHLCV extraction from raw_payload) endpoints. Enable Supabase Realtime
publication and anon read RLS on alerts table. Update vercel.json routes,
tsconfig, and eslint config for dashboard exclusion. Add 21 unit tests and
13 E2E tests for the new endpoints (227 total tests passing, zero regressions).

Co-Authored-By: Ralph <ralph@ai.agent>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     }
   },
   "include": ["src/**/*", "api/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "dashboard", "**/*.test.ts"]
 }
