--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ WEBHOOK_SECRET=your-webhook-secret-here
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
+# Supabase Dashboard (browser-safe, public keys only)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+
 # =============================================================================
 # ADW Autonomous Workflow
 # =============================================================================
