feat: add bot runner, CLI entry point, and barrel exports
- BotRunner: orchestrates AlertListener → PositionManager → TradeExecutor → SupabaseWriteQueue
- Handles alert → VPVR → confirmation → entry calc → order placement flow
- SignalR tick processing for trailing stop evaluation
- Fire-and-forget LLM analysis on new positions
- CLI with live terminal status display, Ctrl+C graceful shutdown
- Added "bot" npm script: `npm run bot -- --dry-run`
- 6 new unit tests for runner lifecycle

Co-Authored-By: Ralph <ralph@ai.agent>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:coverage": "vitest run --coverage",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "validate": "npm run lint && npm run typecheck && npm run test && npm run test:e2e",
-    "db:migrate": "vite-node scripts/migrate.ts"
+    "db:migrate": "vite-node scripts/migrate.ts",
+    "bot": "vite-node src/bot/cli.ts"
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
