feat: implement #10 backtest engine with simulator, reporter, and CLI (build loop 1)
Phase 7: Backtest types, pure trade simulator, engine with Supabase/TopstepX
integration, terminal reporter, CLI entry point, and npm script.

Co-Authored-By: Ralph <ralph@ai.agent>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "validate": "npm run lint && npm run typecheck && npm run test && npm run test:e2e",
     "db:migrate": "vite-node scripts/migrate.ts",
-    "bot": "vite-node src/bot/cli.ts"
+    "bot": "vite-node src/bot/cli.ts",
+    "backtest": "vite-node src/bot/backtest/cli.ts"
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
